Replace with new version

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="https://use.typekit.net/cfj0zjm.css" />
   </head>
 
-  <body data-barba="wrapper">
-    <main data-barba="container">
-      <header>
+  <body>
+    <div data-scroll>
+      <div data-scroll-content>
         <svg
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 48 48"
@@ -26,27 +26,11 @@
             d="M20.078 14.026L24.157 0l5.02 14.026 12.548-7.013-6.588 13.247L48 24.312l-12.863 4.675 6.588 12.78-13.803-7.481L24.157 48l-4.079-13.714-13.176 7.48 5.96-12.779L0 24l12.863-3.74-5.02-13.247 12.235 7.013z"
           />
         </svg>
-        <ul class="numbers">
-          <li>01</li>
-          <li>02</li>
-          <li>03</li>
-          <li>04</li>
-          <li>05</li>
-          <li>06</li>
-          <li>07</li>
-          <li>08</li>
-          <li>09</li>
-        </ul>
         <div class="circle-container">
           <div class="circle"></div>
         </div>
         <div class="vertical-line"></div>
         <div class="horizontal-line"></div>
-        <h1 class="name">Nicolas Bertolino</h1>
-        <ul class="roles">
-          <li>Front-end Developer</li>
-          <li>UI/UX Designer</li>
-        </ul>
         <ul class="socials">
           <li>
             <a href="mailto:hello@nicolasbertolino.com">Mail</a>
@@ -59,61 +43,127 @@
             >
           </li>
           <li>
-            <a target="_blank" href="https://www.behance.net/nicolasbertolino"
-              >Behance</a
-            >
-          </li>
-          <li>
             <a target="_blank" href="https://github.com/nicolasbertolino"
               >Github</a
             >
           </li>
+          <li>
+            <a target="_blank" href="https://www.behance.net/nicolasbertolino"
+              >Behance</a
+            >
+          </li>
         </ul>
-      </header>
-      <div class="work">
-        <h4>Mes Réalisations</h4>
-        <div>
-          <a href="/black-march.html" data-number="01">Black March</a>
-          <a href="/terrefete.html" data-number="02">Terrefète</a>
-          <a href="/les-ptits-coquelicots.html" data-number="03"
-            >Les P'tits Coquelicots</a
-          >
+        <div class="intro">
+          <h1>Nicolas Bertolino</h1>
+          <h1>Web designer</h1>
+          <p>
+            Développeur front-end spécialisé dans la conception<br />d'interfaces
+            et d'expériences utilisateurs.
+          </p>
         </div>
-      </div>
-      <div class="catchphrase">
-        <h3>
-          Des sites engageants qui ne ressemblent pas à celui du voisin. Pour
-          que votre visiteur ait le béguin et se souvienne de vous. À vous la
-          gloire.
-        </h3>
-      </div>
-      <div class="about">
-        <div>
-          <h1>N.</h1>
+        <div class="project-right">
+          <a
+            class="showcase"
+            target="_blank"
+            href="https://www.blackmarchofficial.com/"
+          >
+            <img src="assets/images/bm.jpg" alt="" />
+          </a>
+          <div>
+            <h2>Black March</h2>
+            <h4>Website / Webstore</h4>
+          </div>
+          <p>2020</p>
+          <p>
+            Black March est un groupe de musique métal originaire de Toulouse.
+            Le projet est arrivé avec un challenge : un e-shop pour la vente des
+            albums, des t-shirts et autres joyeusetés.
+          </p>
+          <p>
+            <a
+              class="link"
+              target="_blank"
+              href="https://github.com/nicolasbertolino/black-march"
+              >Voir le projet sur Github +
+            </a>
+          </p>
+        </div>
+        <div class="catchphrase">
+          <h3>
+            Des sites engageants et modernes. Pour que les visiteurs aient le
+            béguin et se souviennent de mes clients.
+          </h3>
+        </div>
+        <div class="project-left">
+          <a class="showcase" target="_blank" href="https://www.terrefete.com/">
+            <img src="assets/images/tf.jpg" alt="" />
+          </a>
+          <div>
+            <h2>Terrefète</h2>
+            <h4>Website</h4>
+            <p>2019</p>
+            <p>
+              Dans le hameau de Terrefète, une jolie maison familiale se
+              transforme en gite l'été venant. Terrefète c'est plus de 200m² de
+              propriété au coeur des Pyrénées, c'est l'air frais de la montagne
+              et c'est surtout, chaque année, des dizaines de clients
+              satisfaits.
+            </p>
+            <p>
+              <a
+                class="link"
+                target="_blank"
+                href="https://github.com/nicolasbertolino/terrefete"
+                >Voir le projet sur Github +
+              </a>
+            </p>
+          </div>
+        </div>
+        <div class="about">
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
           <h3>a bit about myself</h3>
           <p>
             Un jour, mon cerveau gauche et mon cerveau droit ont signé un pacte
             de coopération. Depuis je design et développe des sites, d'abord à
-            Toulouse mais aussi partout en France.
-          </p>
-          <p>
-            Dans une précédente vie, j'étudiais la sociologie et
+            Toulouse mais aussi partout en France. Dans une précédente vie, j'étudiais la sociologie et
             l'anthropologie. J'aime tenir compte de ce que nous apprennent les
             sciences humaines sur nos façons de penser et de faire des choix.
           </p>
+          <p>
+            
+          </p>
         </div>
-      </div>
-      <div class="contact">
-        <p>
-          <span>Dites–moi tout et</span>
-          <span><strong>lançons–le</strong>, ce beau projet</span
-          ><span
-            ><a class="a-link" href="mailto:hello@nicolasbertolino.com"
-              >hello@nicolasbertolino.com</a
-            ></span
+        <div class="project-right">
+          <a
+            class="showcase"
+            target="_blank"
+            href="https://www.lesptitscoquelicots.com/"
           >
-        </p>
-        <ul class="socials">
+            <img src="assets/images/lpc.jpg" alt="" />
+          </a>
+          <div>
+            <h2>Les P'tits Coquelicots</h2>
+            <h4>Website / Logo / Charte Graphique</h4>
+          </div>
+          <p>2018</p>
+          <p>
+            Les P'tits Coquelicots est une Maison d'Assistantes Maternelles qui
+            fait des choses qui comptent : s'occuper d'enfants en bas âge et les
+            faire grandir. Les Coquelicots ce sont eux, fragiles et plein
+            d'ardeur.
+          </p>
+          <p>
+            <a
+              class="link"
+              target="_blank"
+              href="https://github.com/nicolasbertolino/lesptitscoquelicots"
+              >Voir le projet sur Github +
+            </a>
+          </p>
+        </div>
+        <ul class="socials-horizontal">
           <li>
             <a
               target="_blank"
@@ -133,14 +183,13 @@
           </li>
         </ul>
       </div>
-    </main>
+    </div>
     <!-- Scritps -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
-    <script src="https://unpkg.com/@barba/core"></script>
-    <script src="assets/js/pagestransition.js"></script>
+    <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
