Update text intro

--- a/index.html
+++ b/index.html
@@ -55,10 +55,9 @@
         </ul>
         <div class="intro">
           <h1>Nicolas Bertolino</h1>
-          <h1>Web designer</h1>
+          <h1>Développeur front-end</h1>
           <p>
-            Développeur front-end spécialisé dans la conception<br />d'interfaces
-            et d'expériences utilisateurs.
+            Développeur spécialisé dans la conception et l'intégration<br />d'interfaces et d'expériences utilisateurs.
           </p>
         </div>
         <div class="project-right">
