Add rel="noopener" to links

--- a/index.html
+++ b/index.html
@@ -38,17 +38,24 @@
           <li>
             <a
               target="_blank"
+              rel="noopener"
               href="https://www.linkedin.com/in/nicolasbertolino"
               >Linkedin</a
             >
           </li>
           <li>
-            <a target="_blank" href="https://github.com/nicolasbertolino"
+            <a
+              target="_blank"
+              rel="noopener"
+              href="https://github.com/nicolasbertolino"
               >Github</a
             >
           </li>
           <li>
-            <a target="_blank" href="https://www.behance.net/nicolasbertolino"
+            <a
+              target="_blank"
+              rel="noopener"
+              href="https://www.behance.net/nicolasbertolino"
               >Behance</a
             >
           </li>
@@ -57,13 +64,15 @@
           <h1>Nicolas Bertolino</h1>
           <h2>Développeur front-end</h2>
           <p>
-            Développeur spécialisé dans la conception et l'intégration<br />d'interfaces et d'expériences utilisateurs.
+            Développeur spécialisé dans la conception et l'intégration<br />d'interfaces
+            et d'expériences utilisateurs.
           </p>
         </div>
         <div class="project-right">
           <a
             class="showcase"
             target="_blank"
+            rel="noopener"
             href="https://www.blackmarchofficial.com/"
           >
             <img src="assets/images/bm.jpg" alt="" />
@@ -82,6 +91,7 @@
             <a
               class="link"
               target="_blank"
+              rel="noopener"
               href="https://github.com/nicolasbertolino/black-march"
               >Voir le projet sur Github +
             </a>
@@ -94,7 +104,12 @@
           </h4>
         </div>
         <div class="project-left">
-          <a class="showcase" target="_blank" href="https://www.terrefete.com/">
+          <a
+            class="showcase"
+            target="_blank"
+            rel="noopener"
+            href="https://www.terrefete.com/"
+          >
             <img src="assets/images/tf.jpg" alt="" />
           </a>
           <div>
@@ -112,6 +127,7 @@
               <a
                 class="link"
                 target="_blank"
+                rel="noopener"
                 href="https://github.com/nicolasbertolino/terrefete"
                 >Voir le projet sur Github +
               </a>
@@ -126,18 +142,18 @@
           <p>
             Un jour, mon cerveau gauche et mon cerveau droit ont signé un pacte
             de coopération. Depuis je design et développe des sites, d'abord à
-            Toulouse mais aussi partout en France. Dans une précédente vie, j'étudiais la sociologie et
-            l'anthropologie. J'aime tenir compte de ce que nous apprennent les
-            sciences humaines sur nos façons de penser et de faire des choix.
+            Toulouse mais aussi partout en France. Dans une précédente vie,
+            j'étudiais la sociologie et l'anthropologie. J'aime tenir compte de
+            ce que nous apprennent les sciences humaines sur nos façons de
+            penser et de faire des choix.
           </p>
-          <p>
-            
-          </p>
+          <p></p>
         </div>
         <div class="project-right">
           <a
             class="showcase"
             target="_blank"
+            rel="noopener"
             href="https://www.lesptitscoquelicots.com/"
           >
             <img src="assets/images/lpc.jpg" alt="" />
@@ -157,6 +173,7 @@
             <a
               class="link"
               target="_blank"
+              rel="noopener"
               href="https://github.com/nicolasbertolino/lesptitscoquelicots"
               >Voir le projet sur Github +
             </a>
@@ -166,17 +183,24 @@
           <li>
             <a
               target="_blank"
+              rel="noopener"
               href="https://www.linkedin.com/in/nicolasbertolino"
               >Linkedin</a
             >
           </li>
           <li>
-            <a target="_blank" href="https://www.behance.net/nicolasbertolino"
+            <a
+              target="_blank"
+              rel="noopener"
+              href="https://www.behance.net/nicolasbertolino"
               >Behance</a
             >
           </li>
           <li>
-            <a target="_blank" href="https://github.com/nicolasbertolino"
+            <a
+              target="_blank"
+              rel="noopener"
+              href="https://github.com/nicolasbertolino"
               >Github</a
             >
           </li>
