--- a/projets.html
+++ b/projets.html
@@ -43,14 +43,7 @@
     <div class="vertical-line"></div>
     <div class="horizontal-line"></div>
     <!-- Main -->
-    <main data-barba="container" data-barba-namespace="home">
-      <!-- Star -->
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" class="star">
-        <path
-          fill-rule="evenodd"
-          d="M20.078 14.026L24.157 0l5.02 14.026 12.548-7.013-6.588 13.247L48 24.312l-12.863 4.675 6.588 12.78-13.803-7.481L24.157 48l-4.079-13.714-13.176 7.48 5.96-12.779L0 24l12.863-3.74-5.02-13.247 12.235 7.013z"
-        />
-      </svg>
+    <main data-barba="container" data-barba-namespace="work">
       <!-- Socials -->
       <div class="socials">
         <a
@@ -103,12 +96,94 @@
         </a>
       </div>
       <!-- Intro -->
-      <div class="intro">
-        <h1>Nicolas Bertolino</h1>
-        <h2>Web Designer</h2>
+      <div class="project-right">
+        <a
+          class="picture"
+          target="_blank"
+          rel="noopener"
+          href="https://www.blackmarchofficial.com/"
+        >
+          <img src="assets/images/bm.jpg" alt="" />
+        </a>
+        <div>
+          <h3>Black March</h3>
+          <h5>Website / Webstore</h5>
+        </div>
+        <p>2020</p>
         <p>
-          Développeur front-end spécialisé dans la conception et
-          l'intégration<br />d'interfaces et d'expériences utilisateurs.
+          Black March est un groupe de musique métal originaire de Toulouse.
+          Le projet est arrivé avec un challenge : un e-shop pour la vente des
+          albums, des t-shirts et autres joyeusetés.
+        </p>
+        <p>
+          <a
+            class="link"
+            target="_blank"
+            rel="noopener"
+            href="https://github.com/nicolasbertolino/black-march"
+            >Voir le projet sur Github +
+          </a>
+        </p>
+      </div>
+      <div class="project-left">
+        <a
+          class="picture"
+          target="_blank"
+          rel="noopener"
+          href="https://www.terrefete.com/"
+        >
+          <img src="assets/images/tf.jpg" alt="" />
+        </a>
+        <div>
+          <h3>Terrefète</h3>
+          <h5>Website</h5>
+          <p>2019</p>
+          <p>
+            Dans le hameau de Terrefète, une jolie maison familiale se
+            transforme en gite l'été venant. Terrefète c'est plus de 200m² de
+            propriété au coeur des Pyrénées, c'est l'air frais de la montagne
+            et c'est surtout, chaque année, des dizaines de clients
+            satisfaits.
+          </p>
+          <p>
+            <a
+              class="link"
+              target="_blank"
+              rel="noopener"
+              href="https://github.com/nicolasbertolino/terrefete"
+              >Voir le projet sur Github +
+            </a>
+          </p>
+        </div>
+      </div>
+      <div class="project-right">
+        <a
+          class="picture"
+          target="_blank"
+          rel="noopener"
+          href="https://www.lesptitscoquelicots.com/"
+        >
+          <img src="assets/images/lpc.jpg" alt="" />
+        </a>
+        <div>
+          <h3>Les P'tits Coquelicots</h3>
+          <h5>Website / Logo / Charte Graphique</h5>
+        </div>
+        <p>2018</p>
+        <p>
+          Les P'tits Coquelicots est une Maison d'Assistantes Maternelles qui
+          fait des choses qui comptent : s'occuper d'enfants en bas âge et les
+          faire grandir. Les Coquelicots ce sont eux, fragiles et plein
+          d'ardeur.
+        </p>
+        <p>
+          <a
+            class="link"
+            target="_blank"
+            rel="noopener"
+            href="https://github.com/nicolasbertolino/lesptitscoquelicots"
+            >Voir le projet sur Github +
+          </a>
         </p>
       </div>
     </main>
