--- a/a-propos.html
+++ b/a-propos.html
@@ -43,16 +43,9 @@
     <div class="vertical-line"></div>
     <div class="horizontal-line"></div>
     <!-- Main -->
-    <main data-barba="container" data-barba-namespace="home">
-      <!-- Star -->
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" class="star">
-        <path
-          fill-rule="evenodd"
-          d="M20.078 14.026L24.157 0l5.02 14.026 12.548-7.013-6.588 13.247L48 24.312l-12.863 4.675 6.588 12.78-13.803-7.481L24.157 48l-4.079-13.714-13.176 7.48 5.96-12.779L0 24l12.863-3.74-5.02-13.247 12.235 7.013z"
-        />
-      </svg>
+    <main data-barba="container" data-barba-namespace="about">
       <!-- Socials -->
-      <div class="socials">
+      <!-- <div class="socials">
         <a
           target="_blank"
           rel="noopener"
@@ -101,20 +94,39 @@
             />
           </svg>
         </a>
-      </div>
+      </div> -->
       <!-- Intro -->
-      <div class="intro">
-        <h1>Nicolas Bertolino</h1>
-        <h2>Web Designer</h2>
-        <p>
-          Développeur front-end spécialisé dans la conception et
-          l'intégration<br />d'interfaces et d'expériences utilisateurs.
-        </p>
+      <div class="about">
+        <img src="assets/images/cv.jpg" alt="Curriculum Vitae" />
+        <div class="right-text">
+          <h1>N.</h1>
+          <div>
+            <h2>A bit about myself</h2>
+            <p>
+              Un jour, mon cerveau gauche et mon cerveau droit ont signé un
+              pacte de coopération. Depuis je design et développe des sites
+              engageants et modernes, que les visiteurs aient le béguin et se
+              souviennent de mes clients.
+            </p>
+            <p>
+              Dans une précédente vie, j'étudiais la sociologie et
+              l'anthropologie. J'aime tenir compte de ce que nous apprennent les
+              sciences humaines sur nos façons de penser et de faire des choix.
+            </p>
+          </div>
+          <a
+            class="cv"
+            target="_blank"
+            rel="noopener"
+            href="https://drive.google.com/file/d/1rK0a8vHgm34DCTE9UhXYM0JX268yNARQ/view?usp=sharing"
+            >Mon CV en PDF</a
+          >
+        </div>
       </div>
     </main>
     <!-- Scritps -->
-    <script src="https://unpkg.com/@barba/core"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js"></script>
+    <script src="https://unpkg.com/@barba/core"></script>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
