--- a/contact.html
+++ b/contact.html
@@ -14,28 +14,6 @@
   </head>
 
   <body data-barba="wrapper">
-    <!-- Nav -->
-    <nav>
-      <div class="logo">
-        <a href="/">N.</a>
-      </div>
-      <ul>
-        <li>
-          <a href="projets.html">Projets</a>
-        </li>
-        <li>
-          <a href="a-propos.html">À propos</a>
-        </li>
-        <li>
-          <a href="contact.html">Contact</a>
-        </li>
-      </ul>
-      <div class="mail">
-        <a class="link" href="mailto:hello@nicolasbertolino.com">
-          hello@nicolasbertolino.com
-        </a>
-      </div>
-    </nav>
     <!-- Geometry -->
     <div class="circle-container">
       <div class="circle"></div>
@@ -44,43 +22,67 @@
     <div class="horizontal-line"></div>
     <!-- Main -->
     <main data-barba="container" data-barba-namespace="contact">
-      <!-- Contact -->
-      <div class="contact">
-        <div>
-          <ul>
-            <li>
-              <a
-                target="_blank"
-                rel="noopener"
-                href="https://www.linkedin.com/in/nicolasbertolino"
-                >Linkedin</a
-              >
-            </li>
-            <li>
-              <a
-                target="_blank"
-                rel="noopener"
-                href="https://github.com/nicolasbertolino"
-                >Github</a
-              >
-            </li>
-            <li>
-              <a
-                target="_blank"
-                rel="noopener"
-                href="https://www.behance.net/nicolasbertolino"
-                >Behance</a
-              >
-            </li>
-          </ul>
+      <!-- Nav -->
+      <nav>
+        <div class="logo">
+          <a href="/">N.</a>
         </div>
-        <div>
-          <p>
-            Disponible pour une collaboration<br />Écrivez-moi à
-            <a class="link" href="mailto:hello@nicolasbertolino.com">
-              hello@nicolasbertolino.com</a
-            >
-          </p>
+        <ul>
+          <li>
+            <a href="projets.html">Projets</a>
+          </li>
+          <li>
+            <a href="a-propos.html">À propos</a>
+          </li>
+          <li>
+            <a class="active" href="contact.html">Contact</a>
+          </li>
+        </ul>
+        <div class="mail">
+          <a class="link" href="mailto:hello@nicolasbertolino.com">
+            hello@nicolasbertolino.com
+          </a>
+        </div>
+      </nav>
+      <div class="content">
+        <!-- Contact -->
+        <div class="contact">
+          <div>
+            <ul>
+              <li>
+                <a
+                  target="_blank"
+                  rel="noopener"
+                  href="https://www.linkedin.com/in/nicolasbertolino"
+                  >Linkedin</a
+                >
+              </li>
+              <li>
+                <a
+                  target="_blank"
+                  rel="noopener"
+                  href="https://github.com/nicolasbertolino"
+                  >Github</a
+                >
+              </li>
+              <li>
+                <a
+                  target="_blank"
+                  rel="noopener"
+                  href="https://www.behance.net/nicolasbertolino"
+                  >Behance</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div>
+            <p>
+              Disponible pour une collaboration<br />Écrivez-moi à
+              <a class="link" href="mailto:hello@nicolasbertolino.com">
+                hello@nicolasbertolino.com</a
+              >
+            </p>
+          </div>
         </div>
       </div>
     </main>
