--- a/projets.html
+++ b/projets.html
@@ -14,28 +14,6 @@
   </head>
 
   <body data-barba="wrapper">
-    <!-- Nav -->
-    <nav>
-      <div class="logo">
-        <a href="/">N.</a>
-      </div>
-      <ul>
-        <li>
-          <a href="projets.html">Projets</a>
-        </li>
-        <li>
-          <a href="a-propos.html">À propos</a>
-        </li>
-        <li>
-          <a href="contact.html">Contact</a>
-        </li>
-      </ul>
-      <div class="mail">
-        <a class="link" href="mailto:hello@nicolasbertolino.com">
-          hello@nicolasbertolino.com
-        </a>
-      </div>
-    </nav>
     <!-- Geometry -->
     <div class="circle-container">
       <div class="circle"></div>
@@ -44,147 +22,171 @@
     <div class="horizontal-line"></div>
     <!-- Main -->
     <main data-barba="container" data-barba-namespace="work">
-      <!-- Socials -->
-      <div class="socials">
-        <a
-          target="_blank"
-          rel="noopener"
-          href="https://www.linkedin.com/in/nicolasbertolino"
-          ><svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="30.907"
-            height="30.907"
-            viewBox="0 0 30.907 30.907"
-          >
-            <path
-              d="M26.332 26.338h-4.577v-7.172c0-1.71-.035-3.911-2.385-3.911-2.386 0-2.751 1.861-2.751 3.785v7.3h-4.577V11.59h4.4v2.01h.058a4.823 4.823 0 014.34-2.382c4.637 0 5.5 3.052 5.5 7.025v8.1zM6.873 9.572a2.658 2.658 0 112.658-2.659 2.655 2.655 0 01-2.658 2.659zm2.295 16.766h-4.59V11.59h4.59zM28.621 0H2.281A2.253 2.253 0 000 2.227V28.68a2.252 2.252 0 002.281 2.227h26.336a2.261 2.261 0 002.29-2.227V2.227A2.262 2.262 0 0028.617 0z"
-              fill="#333"
-            />
-          </svg>
-        </a>
-        <a
-          target="_blank"
-          rel="noopener"
-          href="https://github.com/nicolasbertolino"
-          ><svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="30.907"
-            height="30.142"
-            viewBox="0 0 30.907 30.142"
-          >
-            <path
-              d="M15.454 0a15.454 15.454 0 00-4.887 30.115c.773.146 1.056-.332 1.056-.743 0-.367-.013-1.339-.019-2.627C7.3 27.678 6.4 24.672 6.4 24.672a4.1 4.1 0 00-1.719-2.26c-1.4-.958.108-.939.108-.939a3.24 3.24 0 012.365 1.592 3.293 3.293 0 004.5 1.285 3.3 3.3 0 01.979-2.067c-3.432-.386-7.039-1.715-7.039-7.637a5.962 5.962 0 011.59-4.147 5.494 5.494 0 01.135-4.09s1.294-.415 4.25 1.584a14.57 14.57 0 017.727 0c2.936-2 4.23-1.584 4.23-1.584a5.647 5.647 0 01.155 4.09 5.986 5.986 0 011.584 4.147c0 5.937-3.612 7.244-7.051 7.624a3.7 3.7 0 011.043 2.859c0 2.068-.019 3.729-.019 4.232 0 .406.27.889 1.062.734A15.435 15.435 0 0015.454 0"
-              fill="#333"
-            />
-          </svg>
-        </a>
-        <a
-          target="_blank"
-          rel="noopener"
-          href="https://www.behance.net/nicolasbertolino"
-          ><svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="30.907"
-            height="19.322"
-            viewBox="0 0 30.907 19.322"
-          >
-            <path
-              d="M8.938-.001a11.488 11.488 0 012.474.246 5.564 5.564 0 011.913.786 3.621 3.621 0 011.237 1.443A5.148 5.148 0 0115 4.699a4.192 4.192 0 01-.653 2.4 4.719 4.719 0 01-1.935 1.572 4.54 4.54 0 012.6 1.765 5.288 5.288 0 01.857 3.04 5.326 5.326 0 01-.528 2.486 4.767 4.767 0 01-1.494 1.739 6.557 6.557 0 01-2.151.988 9.425 9.425 0 01-2.461.327H0v-19h8.938zm12.886 15.669a3.362 3.362 0 002.44.828 3.364 3.364 0 001.971-.576 2.372 2.372 0 001-1.211h3.334a6.272 6.272 0 01-2.448 3.543 7.067 7.067 0 01-3.968 1.069 7.9 7.9 0 01-2.927-.515 6.374 6.374 0 01-2.216-1.469 6.571 6.571 0 01-1.387-2.28 8.453 8.453 0 01-.481-2.924 7.835 7.835 0 01.519-2.873 6.687 6.687 0 013.679-3.844 6.9 6.9 0 012.86-.558 6.494 6.494 0 013.066.674 6.184 6.184 0 012.139 1.8 7.174 7.174 0 011.211 2.6 10.4 10.4 0 01.271 3.066h-9.902a3.9 3.9 0 00.915 2.66l-.1.039zm-13.192.064a5.424 5.424 0 001.167-.12 2.987 2.987 0 00.983-.386 1.909 1.909 0 00.67-.751 2.641 2.641 0 00.245-1.237 2.5 2.5 0 00-.825-2.087 3.548 3.548 0 00-2.177-.618H4.174v5.218h4.458v-.039zm17.53-7.279a2.836 2.836 0 00-2.135-.763 3.2 3.2 0 00-1.5.307 2.776 2.776 0 00-.953.76 2.682 2.682 0 00-.505.966 4.516 4.516 0 00-.174.915h6.135a3.68 3.68 0 00-.876-2.177v.013zM8.4 7.661a3 3 0 001.836-.531 1.983 1.983 0 00.714-1.724 2.427 2.427 0 00-.232-1.09 1.883 1.883 0 00-.644-.66 2.728 2.728 0 00-.928-.331 5.7 5.7 0 00-1.082-.1h-3.9v4.432H8.4zm11.72-6.387h7.689v1.871H20.12V1.271z"
-              fill="#333"
-            />
-          </svg>
-        </a>
-      </div>
-      <!-- Intro -->
-      <div class="project-right">
-        <a
-          class="picture"
-          target="_blank"
-          rel="noopener"
-          href="https://www.blackmarchofficial.com/"
-        >
-          <img src="assets/images/bm.jpg" alt="" />
-        </a>
-        <div>
-          <h3>Black March</h3>
-          <h5>Website / Webstore</h5>
+      <!-- Nav -->
+      <nav>
+        <div class="logo">
+          <a href="/">N.</a>
         </div>
-        <p>2020</p>
-        <p>
-          Black March est un groupe de musique métal originaire de Toulouse.
-          Le projet est arrivé avec un challenge : un e-shop pour la vente des
-          albums, des t-shirts et autres joyeusetés.
-        </p>
-        <p>
+        <ul>
+          <li>
+            <a class="active" href="projets.html">Projets</a>
+          </li>
+          <li>
+            <a href="a-propos.html">À propos</a>
+          </li>
+          <li>
+            <a href="contact.html">Contact</a>
+          </li>
+        </ul>
+        <div class="mail">
+          <a class="link" href="mailto:hello@nicolasbertolino.com">
+            hello@nicolasbertolino.com
+          </a>
+        </div>
+      </nav>
+      <div class="content">
+        <!-- Socials -->
+        <div class="socials">
           <a
-            class="link"
             target="_blank"
             rel="noopener"
-            href="https://github.com/nicolasbertolino/black-march"
-            >Voir le projet sur Github +
+            href="https://www.linkedin.com/in/nicolasbertolino"
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="30.907"
+              height="30.907"
+              viewBox="0 0 30.907 30.907"
+            >
+              <path
+                d="M26.332 26.338h-4.577v-7.172c0-1.71-.035-3.911-2.385-3.911-2.386 0-2.751 1.861-2.751 3.785v7.3h-4.577V11.59h4.4v2.01h.058a4.823 4.823 0 014.34-2.382c4.637 0 5.5 3.052 5.5 7.025v8.1zM6.873 9.572a2.658 2.658 0 112.658-2.659 2.655 2.655 0 01-2.658 2.659zm2.295 16.766h-4.59V11.59h4.59zM28.621 0H2.281A2.253 2.253 0 000 2.227V28.68a2.252 2.252 0 002.281 2.227h26.336a2.261 2.261 0 002.29-2.227V2.227A2.262 2.262 0 0028.617 0z"
+                fill="#333"
+              />
+            </svg>
           </a>
-        </p>
-      </div>
-      <div class="project-left">
-        <a
-          class="picture"
-          target="_blank"
-          rel="noopener"
-          href="https://www.terrefete.com/"
-        >
-          <img src="assets/images/tf.jpg" alt="" />
-        </a>
-        <div>
-          <h3>Terrefète</h3>
-          <h5>Website</h5>
-          <p>2019</p>
+          <a
+            target="_blank"
+            rel="noopener"
+            href="https://github.com/nicolasbertolino"
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="30.907"
+              height="30.142"
+              viewBox="0 0 30.907 30.142"
+            >
+              <path
+                d="M15.454 0a15.454 15.454 0 00-4.887 30.115c.773.146 1.056-.332 1.056-.743 0-.367-.013-1.339-.019-2.627C7.3 27.678 6.4 24.672 6.4 24.672a4.1 4.1 0 00-1.719-2.26c-1.4-.958.108-.939.108-.939a3.24 3.24 0 012.365 1.592 3.293 3.293 0 004.5 1.285 3.3 3.3 0 01.979-2.067c-3.432-.386-7.039-1.715-7.039-7.637a5.962 5.962 0 011.59-4.147 5.494 5.494 0 01.135-4.09s1.294-.415 4.25 1.584a14.57 14.57 0 017.727 0c2.936-2 4.23-1.584 4.23-1.584a5.647 5.647 0 01.155 4.09 5.986 5.986 0 011.584 4.147c0 5.937-3.612 7.244-7.051 7.624a3.7 3.7 0 011.043 2.859c0 2.068-.019 3.729-.019 4.232 0 .406.27.889 1.062.734A15.435 15.435 0 0015.454 0"
+                fill="#333"
+              />
+            </svg>
+          </a>
+          <a
+            target="_blank"
+            rel="noopener"
+            href="https://www.behance.net/nicolasbertolino"
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="30.907"
+              height="19.322"
+              viewBox="0 0 30.907 19.322"
+            >
+              <path
+                d="M8.938-.001a11.488 11.488 0 012.474.246 5.564 5.564 0 011.913.786 3.621 3.621 0 011.237 1.443A5.148 5.148 0 0115 4.699a4.192 4.192 0 01-.653 2.4 4.719 4.719 0 01-1.935 1.572 4.54 4.54 0 012.6 1.765 5.288 5.288 0 01.857 3.04 5.326 5.326 0 01-.528 2.486 4.767 4.767 0 01-1.494 1.739 6.557 6.557 0 01-2.151.988 9.425 9.425 0 01-2.461.327H0v-19h8.938zm12.886 15.669a3.362 3.362 0 002.44.828 3.364 3.364 0 001.971-.576 2.372 2.372 0 001-1.211h3.334a6.272 6.272 0 01-2.448 3.543 7.067 7.067 0 01-3.968 1.069 7.9 7.9 0 01-2.927-.515 6.374 6.374 0 01-2.216-1.469 6.571 6.571 0 01-1.387-2.28 8.453 8.453 0 01-.481-2.924 7.835 7.835 0 01.519-2.873 6.687 6.687 0 013.679-3.844 6.9 6.9 0 012.86-.558 6.494 6.494 0 013.066.674 6.184 6.184 0 012.139 1.8 7.174 7.174 0 011.211 2.6 10.4 10.4 0 01.271 3.066h-9.902a3.9 3.9 0 00.915 2.66l-.1.039zm-13.192.064a5.424 5.424 0 001.167-.12 2.987 2.987 0 00.983-.386 1.909 1.909 0 00.67-.751 2.641 2.641 0 00.245-1.237 2.5 2.5 0 00-.825-2.087 3.548 3.548 0 00-2.177-.618H4.174v5.218h4.458v-.039zm17.53-7.279a2.836 2.836 0 00-2.135-.763 3.2 3.2 0 00-1.5.307 2.776 2.776 0 00-.953.76 2.682 2.682 0 00-.505.966 4.516 4.516 0 00-.174.915h6.135a3.68 3.68 0 00-.876-2.177v.013zM8.4 7.661a3 3 0 001.836-.531 1.983 1.983 0 00.714-1.724 2.427 2.427 0 00-.232-1.09 1.883 1.883 0 00-.644-.66 2.728 2.728 0 00-.928-.331 5.7 5.7 0 00-1.082-.1h-3.9v4.432H8.4zm11.72-6.387h7.689v1.871H20.12V1.271z"
+                fill="#333"
+              />
+            </svg>
+          </a>
+        </div>
+        <!-- Intro -->
+        <div class="project-right">
+          <a
+            class="picture"
+            target="_blank"
+            rel="noopener"
+            href="https://www.blackmarchofficial.com/"
+          >
+            <img src="assets/images/bm.jpg" alt="" />
+          </a>
+          <div>
+            <h3>Black March</h3>
+            <h5>Website / Webstore</h5>
+          </div>
+          <p>2020</p>
           <p>
-            Dans le hameau de Terrefète, une jolie maison familiale se
-            transforme en gite l'été venant. Terrefète c'est plus de 200m² de
-            propriété au coeur des Pyrénées, c'est l'air frais de la montagne
-            et c'est surtout, chaque année, des dizaines de clients
-            satisfaits.
+            Black March est un groupe de musique métal originaire de Toulouse.
+            Le projet est arrivé avec un challenge : un e-shop pour la vente des
+            albums, des t-shirts et autres joyeusetés.
           </p>
           <p>
             <a
               class="link"
               target="_blank"
               rel="noopener"
-              href="https://github.com/nicolasbertolino/terrefete"
+              href="https://github.com/nicolasbertolino/black-march"
               >Voir le projet sur Github +
             </a>
           </p>
         </div>
-      </div>
-      <div class="project-right">
-        <a
-          class="picture"
-          target="_blank"
-          rel="noopener"
-          href="https://www.lesptitscoquelicots.com/"
-        >
-          <img src="assets/images/lpc.jpg" alt="" />
-        </a>
-        <div>
-          <h3>Les P'tits Coquelicots</h3>
-          <h5>Website / Logo / Charte Graphique</h5>
-        </div>
-        <p>2018</p>
-        <p>
-          Les P'tits Coquelicots est une Maison d'Assistantes Maternelles qui
-          fait des choses qui comptent : s'occuper d'enfants en bas âge et les
-          faire grandir. Les Coquelicots ce sont eux, fragiles et plein
-          d'ardeur.
-        </p>
-        <p>
+        <div class="project-left">
           <a
-            class="link"
+            class="picture"
             target="_blank"
             rel="noopener"
-            href="https://github.com/nicolasbertolino/lesptitscoquelicots"
-            >Voir le projet sur Github +
+            href="https://www.terrefete.com/"
+          >
+            <img src="assets/images/tf.jpg" alt="" />
           </a>
-        </p>
+          <div>
+            <h3>Terrefète</h3>
+            <h5>Website</h5>
+            <p>2019</p>
+            <p>
+              Dans le hameau de Terrefète, une jolie maison familiale se
+              transforme en gite l'été venant. Terrefète c'est plus de 200m² de
+              propriété au coeur des Pyrénées, c'est l'air frais de la montagne
+              et c'est surtout, chaque année, des dizaines de clients
+              satisfaits.
+            </p>
+            <p>
+              <a
+                class="link"
+                target="_blank"
+                rel="noopener"
+                href="https://github.com/nicolasbertolino/terrefete"
+                >Voir le projet sur Github +
+              </a>
+            </p>
+          </div>
+        </div>
+        <div class="project-right">
+          <a
+            class="picture"
+            target="_blank"
+            rel="noopener"
+            href="https://www.lesptitscoquelicots.com/"
+          >
+            <img src="assets/images/lpc.jpg" alt="" />
+          </a>
+          <div>
+            <h3>Les P'tits Coquelicots</h3>
+            <h5>Website / Logo / Charte Graphique</h5>
+          </div>
+          <p>2018</p>
+          <p>
+            Les P'tits Coquelicots est une Maison d'Assistantes Maternelles qui
+            fait des choses qui comptent : s'occuper d'enfants en bas âge et les
+            faire grandir. Les Coquelicots ce sont eux, fragiles et plein
+            d'ardeur.
+          </p>
+          <p>
+            <a
+              class="link"
+              target="_blank"
+              rel="noopener"
+              href="https://github.com/nicolasbertolino/lesptitscoquelicots"
+              >Voir le projet sur Github +
+            </a>
+          </p>
+        </div>
       </div>
     </main>
     <!-- Scritps -->
