--- a/contact.html
+++ b/contact.html
@@ -75,6 +75,7 @@
               </li>
             </ul>
           </div>
+          <div class="diagonal-line"></div>
           <div>
             <p>
               Disponible pour une collaboration<br />Écrivez-moi à
@@ -87,9 +88,8 @@
       </div>
     </main>
     <!-- Scritps -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/CSSRulePlugin.min.js"></script>
     <script src="https://unpkg.com/@barba/core"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js"></script>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
