Add Progress bar

--- a/contact.html
+++ b/contact.html
@@ -85,6 +85,7 @@
             </p>
           </div>
         </div>
+        <div id="progressbar"></div>
       </div>
     </main>
     <!-- Scritps -->
