--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
             d'interfaces et d'expériences utilisateurs.
           </p>
         </div>
+        <div id="progressbar"></div>
       </div>
     </main>
     <!-- Scritps -->
