--- a/projets.html
+++ b/projets.html
@@ -187,6 +187,7 @@
             </a>
           </p>
         </div>
+        <div id="progressbar"></div>
       </div>
     </main>
     <!-- Scritps -->
