--- a/a-propos.html
+++ b/a-propos.html
@@ -74,6 +74,7 @@
             >
           </div>
         </div>
+        <div id="progressbar"></div>
       </div>
     </main>
     <!-- Scritps -->
