Add background text to projects

--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
       <!-- Work -->
       <section id="work">
         <div class="project">
+          <div class="text">Black March</div>
           <figure>
             <img
               src="assets/images/bm.jpg"
@@ -153,6 +154,7 @@
           </div>
         </div>
         <div class="project">
+          <div class="text">Terrefète</div>
           <figure>
             <img src="assets/images/tf.jpg" alt="Terrasse de la maison" />
           </figure>
@@ -181,6 +183,7 @@
           </div>
         </div>
         <div class="project">
+          <div class="text">Les P'tits Coquelicots</div>
           <figure>
             <img
               src="assets/images/lpc.jpg"
@@ -251,10 +254,6 @@
           >
         </p>
       </div>
-      <!-- <div>
-          
-        </div>
-        <div class="diagonal-line"></div> -->
     </main>
     <footer>
       <p>Folio—2020</p>
@@ -293,7 +292,7 @@
       <p>Nicolas Bertolino</p>
     </footer>
     <!-- Scritps -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"></script>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
