Add animation to projects

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <!-- Work -->
       <section id="work">
         <div class="project">
-          <div class="text">Black March</div>
+          <span class="text">Black March</span>
           <figure>
             <img
               src="assets/images/bm.jpg"
@@ -154,7 +154,7 @@
           </div>
         </div>
         <div class="project">
-          <div class="text">Terrefète</div>
+          <span class="text">Terrefète</span>
           <figure>
             <img src="assets/images/tf.jpg" alt="Terrasse de la maison" />
           </figure>
@@ -183,7 +183,7 @@
           </div>
         </div>
         <div class="project">
-          <div class="text">Les P'tits Coquelicots</div>
+          <span class="text">Les P'tits Coquelicots</span>
           <figure>
             <img
               src="assets/images/lpc.jpg"
