Create scroll to top event

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
   <body>
     <!-- Nav -->
-    <nav id="top">
+    <nav>
       <div>
-        <a href="#top">
+        <a onClick="window.scrollTo(0, 0)">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="43"
@@ -36,9 +36,6 @@
             </g>
           </svg></a
         >
-        <!-- <a class="link" href="mailto:hello@nicolasbertolino.com">
-          hello@nicolasbertolino.com</a
-        > -->
       </div>
       <div>
         <a class="nav-link" href="#work">Projets</a>
