--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
         </a>
       </div>
     </header>
+    <!-- Main -->
     <main>
       <!-- Work -->
       <section id="work">
@@ -247,6 +248,7 @@
         </p>
       </div>
     </main>
+    <!-- Footer -->
     <footer>
       <p>Folio—2020</p>
       <ul>
@@ -283,7 +285,7 @@
       </ul>
       <p>Nicolas Bertolino</p>
     </footer>
-    <!-- Scritps -->
+    <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"></script>
     <script src="assets/js/main.js"></script>
   </body>
