--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         >
       </div>
       <div>
-        <a class="nav-link" href="#work">Projets</a>
+        <a onClick="document.querySelector('#work').scrollIntoView();">Projets</a>
       </div>
       <div>
-        <a class="nav-link" href="#about">Qui suis-je</a>
+        <a onClick="document.querySelector('#about').scrollIntoView();">Qui suis-je</a>
       </div>
     </nav>
     <!-- Header -->
