Add theme switcher

--- a/index.html
+++ b/index.html
@@ -38,10 +38,14 @@
         >
       </div>
       <div>
-        <a onClick="document.querySelector('#work').scrollIntoView();">Projets</a>
+        <a onClick="document.querySelector('#work').scrollIntoView();"
+          >Projets</a
+        >
       </div>
       <div>
-        <a onClick="document.querySelector('#about').scrollIntoView();">Qui suis-je</a>
+        <a onClick="document.querySelector('#about').scrollIntoView();"
+          >Qui suis-je</a
+        >
       </div>
     </nav>
     <!-- Header -->
@@ -51,7 +55,12 @@
       </div>
       <div class="vertical-line"></div>
       <div class="horizontal-line"></div>
-      <img src="/assets/images/skull.jpg" alt="" />
+      <img id="wolf" src="/assets/images/wolf.png" alt="Visage d'un loup" />
+      <img
+        id="angry"
+        src="/assets/images/wolf-angry.png"
+        alt="Visage d'un loup"
+      />
       <h1><span>Nicolas</span><span>Bertolino</span></h1>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" class="star">
         <path
