Reimplement scroll to sections

--- a/index.html
+++ b/index.html
@@ -38,14 +38,10 @@
         >
       </div>
       <div>
-        <a onClick="document.querySelector('#work').scrollIntoView();"
-          >Projets</a
-        >
+        <a class="nav-link" href="#work">Projets</a>
       </div>
       <div>
-        <a onClick="document.querySelector('#about').scrollIntoView();"
-          >Qui suis-je</a
-        >
+        <a class="nav-link" href="#about">Qui suis-je</a>
       </div>
     </nav>
     <!-- Header -->
