Rework secondary color

--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
       </div>
       <div class="vertical-line"></div>
       <div class="horizontal-line"></div>
-      <img id="wolf" src="/assets/images/wolf.png" alt="Visage d'un loup" />
       <img
+        onclick="toggleTheme('dark');"
+        id="wolf"
+        src="/assets/images/wolf.png"
+        alt="Visage d'un loup"
+      />
+      <img
+        onclick="toggleTheme('light');"
         id="angry"
         src="/assets/images/wolf-angry.png"
         alt="Visage d'un loup"
       />
       <h1><span>Nicolas</span><span>Bertolino</span></h1>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" class="star">
-        <path
-          fill-rule="evenodd"
-          d="M20.078 14.026L24.157 0l5.02 14.026 12.548-7.013-6.588 13.247L48 24.312l-12.863 4.675 6.588 12.78-13.803-7.481L24.157 48l-4.079-13.714-13.176 7.48 5.96-12.779L0 24l12.863-3.74-5.02-13.247 12.235 7.013z"
-        />
-      </svg>
       <h2>Web Designer</h2>
       <p>
         Développeur front-end spécialisé dans la conception et l'intégration
