--- a/les-ptits-coquelicots.html
+++ b/les-ptits-coquelicots.html
@@ -57,14 +57,14 @@
       </header>
 
       <main data-barba="container">
-        <figure data-number="04">
-          <img src="img/vente-immobilier.jpeg" alt="Décoration intérieure - une table entourée de plantes">
+        <figure data-number="02">
+          <img src="img/les-ptits-coquelicots.jpg" alt="Trois mains d'enfants peignent des couleurs pastels">
         </figure>
         <div>
           <ul>
             <li>
               <span>Complété</span>
-              <span>2021</span>
+              <span>v1 2018 - v2 2021</span>
             </li>
             <li>
               <span>Type</span>
@@ -74,20 +74,21 @@
               <span>Rôle</span>
               <span>
                 <span>Charte graphique</span>
+                <span>Logo</span>
                 <span>Intégration</span>
               </span>
             </li>
             <li>
               <span>Client</span>
-              <span>Vente Immobilier</span>
+              <span>Les p'tits Coquelicots</span>
             </li>
           </ul>
           <div class="website">
-            <a href="https://www.nicolasbertolino.com/vente-immobilier" target="_blank">Voir le site</a>
+            <a href="https://www.lesptitscoquelicots.com" target="_blank">Voir le site</a>
           </div>
           <div class="description">
-            <div class="title">Vente Immobilier</div>
-            <p>Promoteur immobilier. Projet réalisé avec un ensemble de composants pris sur différents sites créés lors de mon expérience à Jalis.</p>
+            <div class="title">Les p'tits Coquelicots</div>
+            <p>Les P'tits Coquelicots est une Maison d'Assistantes Maternelles qui fait des choses qui comptent : s'occuper d'enfants en bas âge et les faire grandir. Les Coquelicots ce sont eux, fragiles et plein d'ardeur.</p>
           </div>
         </div>
       </main>
