--- a/demenagements-aubin.html
+++ b/demenagements-aubin.html
@@ -35,19 +35,19 @@
               </a>
             </li>
             <li>
-              <a href="demenagements-aubin.html" data-number="03">
+              <a href="demenagements-aubin" data-number="03">
                 <span>Déménagements Aubin</span>
                 <span>UI / UX / Intégration</span>
               </a>
             </li>
             <li>
-              <a href="black-march.html" data-number="02">
+              <a href="black-march" data-number="02">
                 <span>Black March</span>
                 <span>UI / UX / Intégration</span>
               </a>
             </li>
             <li>
-              <a href="les-ptits-coquelicots.html" data-number="01">
+              <a href="les-ptits-coquelicots" data-number="01">
                 <span>Les p'tits Coquelicots</span>
                 <span>UI / UX / Logo / Intégration</span>
               </a>
