--- a/demenagements-aubin.html
+++ b/demenagements-aubin.html
@@ -83,7 +83,7 @@
             </li>
           </ul>
           <div class="website">
-            <a href="https://www.nicolasbertolino.com/demenagements-aubin" target="_blank">Voir le site</a>
+            <a href="https://www.nicolasbertolino.com/demenagements-services-aubin" target="_blank">Voir le site</a>
           </div>
           <div class="description">
             <div class="title">Déménagements Aubin</div>
