--- a/les_ptits_coquelicots.html
+++ b/les_ptits_coquelicots.html
@@ -35,19 +35,19 @@
               </a>
             </li>
             <li>
-              <a href="demenagements-aubin" data-number="03">
+              <a href="demenagements_aubin" data-number="03">
                 <span>Déménagements Aubin</span>
                 <span>UI / UX / Intégration</span>
               </a>
             </li>
             <li>
-              <a href="black-march" data-number="02">
+              <a href="black_march" data-number="02">
                 <span>Black March</span>
                 <span>UI / UX / Intégration</span>
               </a>
             </li>
             <li>
-              <a href="les-ptits-coquelicots" data-number="01">
+              <a href="les_ptits_coquelicots" data-number="01">
                 <span>Les p'tits Coquelicots</span>
                 <span>UI / UX / Logo / Intégration</span>
               </a>
@@ -57,14 +57,14 @@
       </header>
 
       <main data-barba="container">
-        <figure data-number="03">
-          <img src="img/demenagements-aubin.jpeg" alt="Un amoncellement de cartons prêts à être déménagés">
+        <figure data-number="02">
+          <img src="img/les-ptits-coquelicots.jpg" alt="Trois mains d'enfants peignent des couleurs pastels">
         </figure>
         <div>
           <ul>
             <li>
               <span>Complété</span>
-              <span>2021</span>
+              <span>v1 2018 - v2 2021</span>
             </li>
             <li>
               <span>Type</span>
@@ -74,20 +74,21 @@
               <span>Rôle</span>
               <span>
                 <span>Charte graphique</span>
+                <span>Logo</span>
                 <span>Intégration</span>
               </span>
             </li>
             <li>
               <span>Client</span>
-              <span>Déménagements Aubin</span>
+              <span>Les p'tits Coquelicots</span>
             </li>
           </ul>
           <div class="website">
-            <a href="https://www.nicolasbertolino.com/demenagements-services-aubin" target="_blank">Voir le site</a>
+            <a href="https://www.lesptitscoquelicots.com" target="_blank">Voir le site</a>
           </div>
           <div class="description">
-            <div class="title">Déménagements Aubin</div>
-            <p>Société de déménagement basée au Havre. Site conçu au cours de ma collaboration avec Jalis.</p>
+            <div class="title">Les p'tits Coquelicots</div>
+            <p>Les P'tits Coquelicots est une Maison d'Assistantes Maternelles qui fait des choses qui comptent : s'occuper d'enfants en bas âge et les faire grandir. Les Coquelicots ce sont eux, fragiles et plein d'ardeur.</p>
           </div>
         </div>
       </main>
