--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </li>
           </ul>
           <div class="website">
-            <a href="https://www.nicolasbertolino.com/vente-immo" target="_blank">Voir le site</a>
+            <a href="https://www.nicolasbertolino.com/vente-immobilier" target="_blank">Voir le site</a>
           </div>
           <div class="description">
             <div class="title">Vente Immobilier</div>
