Add null pointer to active nav

--- a/black_march.html
+++ b/black_march.html
@@ -41,7 +41,7 @@
               </a>
             </li>
             <li>
-              <a href="black_march" data-number="02">
+              <a href="black_march" data-number="02" class="active">
                 <span>Black March</span>
                 <span>UI / UX / Intégration</span>
               </a>
