--- a/demenagements_aubin.html
+++ b/demenagements_aubin.html
@@ -35,7 +35,7 @@
               </a>
             </li>
             <li>
-              <a href="demenagements_aubin" data-number="03">
+              <a href="demenagements_aubin" data-number="03" class="active">
                 <span>Déménagements Aubin</span>
                 <span>UI / UX / Intégration</span>
               </a>
