--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <h2>/ Réalisations</h2>
           <ul>
             <li>
-              <a href="/" data-number="04">
+              <a href="/" data-number="04" class="active">
                 <span>Vente Immobilier</span>
                 <span>UI / UX / Intégration</span>
               </a>
