--- a/les_ptits_coquelicots.html
+++ b/les_ptits_coquelicots.html
@@ -47,7 +47,7 @@
               </a>
             </li>
             <li>
-              <a href="les_ptits_coquelicots" data-number="01">
+              <a href="les_ptits_coquelicots" data-number="01" class="active">
                 <span>Les p'tits Coquelicots</span>
                 <span>UI / UX / Logo / Intégration</span>
               </a>
