--- a/black_march.html
+++ b/black_march.html
@@ -41,7 +41,7 @@
               </a>
             </li>
             <li>
-              <a href="black_march" data-number="02" class="active">
+              <a href="black_march" data-number="02">
                 <span>Black March</span>
                 <span>UI / UX / Intégration</span>
               </a>
@@ -86,7 +86,7 @@
             <a href="https://www.blackmarchofficial.com" target="_blank">Voir le site</a>
           </div>
           <div class="description">
-            <div class="title">Black March</div>
+            <h3>Black March</h3>
             <p>Groupe de musique métal originaire de Toulouse, et de bons amis.</p>
           </div>
         </div>
