--- a/demenagements_aubin.html
+++ b/demenagements_aubin.html
@@ -35,7 +35,7 @@
               </a>
             </li>
             <li>
-              <a href="demenagements_aubin" data-number="03" class="active">
+              <a href="demenagements_aubin" data-number="03">
                 <span>Déménagements Aubin</span>
                 <span>UI / UX / Intégration</span>
               </a>
@@ -86,7 +86,7 @@
             <a href="https://www.nicolasbertolino.com/demenagements-aubin" target="_blank">Voir le site</a>
           </div>
           <div class="description">
-            <div class="title">Déménagements Aubin</div>
+            <h3>Déménagements Aubin</h3>
             <p>Société de déménagement basée au Havre. Site conçu au cours de ma collaboration avec Jalis.</p>
           </div>
         </div>
