--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <h2>/ Réalisations</h2>
           <ul>
             <li>
-              <a href="/" data-number="04" class="active">
+              <a href="/" data-number="04">
                 <span>Vente Immobilier</span>
                 <span>UI / UX / Intégration</span>
               </a>
@@ -86,7 +86,7 @@
             <a href="https://www.nicolasbertolino.com/vente-immobilier" target="_blank">Voir le site</a>
           </div>
           <div class="description">
-            <div class="title">Vente Immobilier</div>
+            <h3>Vente Immobilier</h3>
             <p>Promoteur immobilier. Projet réalisé avec un ensemble de composants pris sur différents sites créés lors de mon expérience à Jalis.</p>
           </div>
         </div>
