--- a/les_ptits_coquelicots.html
+++ b/les_ptits_coquelicots.html
@@ -47,7 +47,7 @@
               </a>
             </li>
             <li>
-              <a href="les_ptits_coquelicots" data-number="01" class="active">
+              <a href="les_ptits_coquelicots" data-number="01">
                 <span>Les p'tits Coquelicots</span>
                 <span>UI / UX / Logo / Intégration</span>
               </a>
@@ -87,7 +87,7 @@
             <a href="https://www.lesptitscoquelicots.com" target="_blank">Voir le site</a>
           </div>
           <div class="description">
-            <div class="title">Les p'tits Coquelicots</div>
+            <h3>Les p'tits Coquelicots</h3>
             <p>Les P'tits Coquelicots est une Maison d'Assistantes Maternelles qui fait des choses qui comptent : s'occuper d'enfants en bas âge et les faire grandir. Les Coquelicots ce sont eux, fragiles et plein d'ardeur.</p>
           </div>
         </div>
